# Batista

./: .gitignore
SCC-0210/src/: A10E1.java  A11E1.java  A11E2.java  A12E1.java  A1E1.java  A1E2.java  A2E1.java  A2E2.java  A3E1.java  A3E2.java  A4E1.java  A4E2.java  A6E1.java  A6E2.java  A6E3.java  A7E1.java  A7E2.java  A8E1.java  A8E2.java  A9E1.java  A9E2.java
SCC-0211/: CMakeLists.txt  Cargo.toml
SCC-0211-Java/src/: A10E1.java  A11E1.java  A11E2.java  A13E2.java  A3E1.java  A3E2.java  A5E2.java  A7E2.java  A8E1.java  A8E2.java
